// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer matches the last snapshot without saveChanges 1`] = `
<View>
  <Button
    disabled={true}
    onPress={undefined}
    text="Save Changes"
  />
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Cancel
    </Text>
  </TouchableOpacity>
  <Button
    onPress={[Function]}
    text="Logout"
  />
</View>
`;

exports[`Footer matches the last snapshot without saveChanges 2`] = `
<View>
  <Button
    disabled={false}
    onPress={[Function]}
    text="Save Changes"
  />
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Cancel
    </Text>
  </TouchableOpacity>
  <Button
    onPress={[Function]}
    text="Logout"
  />
</View>
`;

exports[`SocialAccounts matches the last snapshot 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    SOCIAL ACCOUNTS
  </Text>
  <SocialControl
    label="Facebook"
    onChange={[Function]}
    onLink={[Function]}
    provider="facebook"
    unlinkAccount={[Function]}
    value="foo.com"
  />
  <SocialControl
    label="Twitter"
    onChange={[Function]}
    onLink={[Function]}
    provider="twitter"
    unlinkAccount={[Function]}
    updateUserSettings={[Function]}
    value="rara"
  />
</View>
`;

exports[`SocialControl matches the last snapshot linked 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  />
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Unlink
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`SocialControl matches the last snapshot loading 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    Loading
  </Text>
</View>
`;

exports[`SocialControl matches the last snapshot unlinked 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  />
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`UserSettings cancelPassword sets the state 1`] = `
Object {
  "changed": false,
  "editingPassword": false,
  "edits": Object {
    "confirmPassword": null,
    "email": "moo",
    "password": null,
  },
  "errors": Object {
    "confirmPassword": null,
    "email": "bad email",
    "password": null,
  },
}
`;

exports[`UserSettings confirmLeave calls Alert.alert when changed is true 1`] = `
Array [
  Array [
    "You have unsaved changes",
    "Are you sure you want to leave?",
    Array [
      Object {
        "onPress": [Function],
        "text": "Leave",
      },
      Object {
        "style": "cancel",
        "text": "Cancel",
      },
    ],
  ],
]
`;

exports[`UserSettings matches snapshot with state set 1`] = `
<View
  keyboardVerticalOffset={64}
  onLayout={[Function]}
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        >
          EMAIL
        </Text>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          editable={true}
          keyboardType="email-address"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType={undefined}
          secureTextEntry={undefined}
          value="aa@bbb.com"
        />
        <View>
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
            >
              bad email
            </Text>
          </View>
        </View>
      </View>
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        >
          PASSWORD
        </Text>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          editable={true}
          keyboardType={undefined}
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType={undefined}
          secureTextEntry={true}
          value="hunkjnkjn"
        />
        <View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={false}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  undefined,
                  Object {
                    "fontFamily": "Entypo",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </View>
        <View>
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
            >
              needs to be longer
            </Text>
          </View>
        </View>
      </View>
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        >
          CONFIRM PASSWORD
        </Text>
        <TextInput
          autoCapitalize="none"
          autoCorrect={false}
          editable={true}
          keyboardType={undefined}
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType={undefined}
          secureTextEntry={true}
          value="fkldsflkjdf"
        />
        <View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={false}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  undefined,
                  Object {
                    "fontFamily": "Entypo",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </View>
        <View>
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
            >
              needs to match
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        >
          Cancel Password Change
        </Text>
      </View>
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        >
          SOCIAL ACCOUNTS
        </Text>
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
          >
            Facebook
          </Text>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
            >
              Unlink
            </Text>
          </View>
        </View>
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
          >
            Twitter
          </Text>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
            >
              Unlink
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <View>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
              >
                Save Changes
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
          >
            Cancel
          </Text>
        </View>
        <View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <View>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
              >
                Logout
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`UserSettings matches the last snapshot 1`] = `
<Unknown>
  <ScrollViewMock
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
  >
    <SettingControl
      autoCapitalize="none"
      autoCorrect={false}
      error={undefined}
      keyboardType="email-address"
      label="EMAIL"
      onChange={[Function]}
      theme={
        Object {
          "control": Object {
            "marginBottom": 3,
          },
          "error": Object {
            "paddingBottom": 10,
            "paddingVertical": 0,
          },
          "hideErrorTriangle": true,
          "label": Object {
            "color": "#AAACAC",
            "fontFamily": "Circular-Bold",
            "fontSize": 10,
            "marginBottom": 10,
          },
          "textInput": Object {
            "borderBottomWidth": 0,
            "color": "#56667a",
            "fontFamily": "Circular-Book",
            "fontSize": 16,
          },
        }
      }
      value=""
    />
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        PASSWORD
      </Text>
      <TouchableOpacity
        activeOpacity={0.2}
        focusedOpacity={0.7}
        onPress={[Function]}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        >
          Change Password
        </Text>
      </TouchableOpacity>
    </View>
    <SocialAccounts
      facebookUrl={undefined}
      loginWithFacebook={[Function]}
      twitterName={undefined}
      twitterPrompt={[Function]}
      unlinkAccount={[Function]}
      updateField={[Function]}
      updateUserSettings={[Function]}
    />
    <Footer
      cancel={[Function]}
      logout={[Function]}
      saveChanges={false}
    />
  </ScrollViewMock>
</Unknown>
`;

exports[`UserSettings updateField sets the state 1`] = `
Object {
  "changed": true,
  "editingPassword": false,
  "edits": Object {
    "email": "newemail",
    "password": "ldlkd",
  },
  "errors": Object {
    "email": null,
    "password": "too short",
  },
}
`;

exports[`UserSettings validate validates its fields 1`] = `
Object {
  "changed": false,
  "editingPassword": false,
  "edits": Object {
    "confirmPassword": "lalala",
    "email": "ra",
    "password": "rarara",
  },
  "errors": Object {
    "confirmPassword": "Passwords must match",
    "email": "Must be a valid email",
    "password": "Password must be at least 9 characters.",
  },
}
`;
